WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220926
[GPU Process] Web process should be terminated if DisplayListReaderHandle advances past 0
https://bugs.webkit.org/show_bug.cgi?id=220926
Summary
[GPU Process] Web process should be terminated if DisplayListReaderHandle adv...
Wenson Hsieh
Reported
2021-01-25 08:26:14 PST
Address the last message-check-related FIXME in the GPU Process.
Attachments
Patch
(6.00 KB, patch)
2021-01-25 08:37 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-01-25 08:37:08 PST
Created
attachment 418296
[details]
Patch
Wenson Hsieh
Comment 2
2021-01-25 10:19:30 PST
Comment on
attachment 418296
[details]
Patch Thanks for the review!
EWS
Comment 3
2021-01-25 10:33:26 PST
Committed
r271800
: <
https://trac.webkit.org/changeset/271800
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 418296
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-01-25 10:36:45 PST
<
rdar://problem/73577385
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug